@@ -4,7 +4,8 @@ CHANGES
 3.9.1 (unreleased)
 ------------------
 
-- ...
+- Restore compatibility with Python 2.4.
+  [hannosch]
 
 3.9.0 (2009-03-19)
 ------------------
